--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,33 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
-
+.header{
+  text-align: center;
+  margin-top:40px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.navigation .item {
+  color: white;
+}
+
+img {
+    width: 40%;
+    margin-bottom: 50px;
+  }
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  img {
+    width: 90%;
+  }
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -26,6 +49,11 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.project {
+  margin: auto;
+  text-align: center;
 }
 
 @keyframes App-logo-spin {
